[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/inventory_slot.gd" type="Script" id=1]

[node name="InventorySlot" type="CenterContainer"]
margin_right = -290.0
margin_bottom = -122.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ItemTextureRect" type="TextureRect" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 18, 18 )
stretch_mode = 4

[connection signal="gui_input" from="." to="." method="_on_InventorySlot_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_InventorySlot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InventorySlot_mouse_exited"]
